list dependencies in requirements.txt

--- a/plot.ipynb
+++ b/plot.ipynb
@@ -42,8 +42,6 @@
    "source": [
     "import folium\n",
     "from folium import features\n",
-    "import branca\n",
-    "import geojson\n",
     "\n",
     "df = pandas.read_csv(testfolder+'/_xsens_publisher_node_filter_xs_latlongalt.csv', sep=';')\n",
     "\n",
@@ -60,10 +58,8 @@
     "points = points[start:start+n]\n",
     "velocity = velocity[start:start+n]\n",
     "\n",
-    "#center = list(points[0])\n",
-    "center = list(points[0])\n",
+    "center = np.mean(points, axis=0).tolist()\n",
     "my_map = folium.Map(location=center, zoom_start=19, max_zoom=23)\n",
-    "#my_map.line(locations=points)\n",
     "\n",
     "color_line = features.ColorLine(\n",
     "    positions=points,\n",
