new velocity plot

--- a/plot.ipynb
+++ b/plot.ipynb
@@ -11,8 +11,7 @@
     "import pandas\n",
     "import numpy as np\n",
     "\n",
-    "testfolder = 'heliceprincipaletest2'\n",
-    "#testfolder = 'torqeorangetest2'\n"
+    "testfolder = '2018-06-07-16-11-54'\n"
    ]
   },
   {
@@ -48,7 +47,7 @@
     "points = df[['latitude','longitude']].values.tolist()\n",
     "\n",
     "#subsample\n",
-    "subsample = 5\n",
+    "subsample = 10\n",
     "points = points[0:-1:subsample]\n",
     "velocity = vel_abs[0:-1:subsample]\n",
     "\n",
@@ -93,6 +92,65 @@
     "time.sleep(2)  #Give the map tiles some time to load\n",
     "browser.save_screenshot(os.path.join('plot', name+'.png'))\n",
     "browser.quit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from matplotlib.collections import LineCollection\n",
+    "from matplotlib.colors import ListedColormap, BoundaryNorm\n",
+    "\n",
+    "\n",
+    "r = 6371e3 # m\n",
+    "x = df[['longitude']].values*np.pi/180\n",
+    "y = df[['latitude']].values*np.pi/180\n",
+    "\n",
+    "x = r*np.sin(x)*np.cos(np.mean(y))\n",
+    "y = r*np.sin(y)\n",
+    "\n",
+    "x -= x[0]\n",
+    "y -= y[0]\n",
+    "\n",
+    "subsample = 100\n",
+    "x = x[0:-1:subsample]\n",
+    "y = y[0:-1:subsample]\n",
+    "velocity = vel_abs[0:-1:subsample]\n",
+    "\n",
+    "n = 20000\n",
+    "start = int(0.01*len(points))\n",
+    "x = x[start:start+n]\n",
+    "y = y[start:start+n]\n",
+    "velocity = velocity[start:start+n]\n",
+    "\n",
+    "# Create a set of line segments so that we can color them individually\n",
+    "# This creates the points as a N x 1 x 2 array so that we can stack points\n",
+    "# together easily to get the segments. The segments array for line collection\n",
+    "# needs to be (numlines) x (points per line) x 2 (for x and y)\n",
+    "points = np.array([x, y]).T.reshape(-1, 1, 2)\n",
+    "segments = np.concatenate([points[:-1], points[1:]], axis=1)\n",
+    "fig, axs = plt.subplots(1, 1, sharex=True, sharey=True)\n",
+    "\n",
+    "# Create a continuous norm to map from data points to colors\n",
+    "norm = plt.Normalize(velocity.min(), velocity.max())\n",
+    "lc = LineCollection(segments, cmap='viridis', norm=norm)\n",
+    "# Set the values used for colormapping\n",
+    "lc.set_array(velocity)\n",
+    "lc.set_linewidth(1)\n",
+    "line = axs.add_collection(lc)\n",
+    "axcb = fig.colorbar(line, ax=axs)\n",
+    "axcb.set_label('velocity [m/s]')\n",
+    "\n",
+    "axs.set_xlim(x.min(), x.max())\n",
+    "axs.set_ylim(y.min(), y.max())\n",
+    "plt.xlabel('x [m]')\n",
+    "plt.ylabel('y [m]')\n",
+    "plt.savefig('plot/traj1.png')\n",
+    "plt.show()"
    ]
   },
   {
